add item and add baidu tongji

--- a/config.yml
+++ b/config.yml
@@ -66,7 +66,7 @@ params:
     Title: 搬家甩卖啦！
     Content: "自提地址：160 Pleasant St. Malden, MA \n
 
-    微信联系：jiangquchengpeter \n
+    预定 8/21 截至，微信联系：jiangquchengpeter \n
     
     均可议价  "
 
