--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ env: production
 theme: PaperMod
 
 # 设置站标题
-title: Moving Sale @ Jiang.news
+title: http://Moving.Jiang.News/
 params: &params_a
   # 设置站标题前logo，[dark, light]
   label:
@@ -64,10 +64,10 @@ params:
 
   homeInfoParams:
     enabled: true
-    Title: 搬家甩卖啦！
+    Title:  Moving Sale 搬家甩卖啦！
     Content: "自提地址：160 Pleasant St. Malden, MA \n
 
-    预定 8/21 截至，微信联系：jiangquchengpeter \n
+    预定 8/22 截至，微信联系：jiangquchengpeter， \n
     
     均可议价  "
 
