temperately stop top sign

--- a/config.yml
+++ b/config.yml
@@ -54,6 +54,7 @@ params:
   showShareButtons: true
   showPostNavLinks: true
   # ShowToc: true
+  disableScrollToTop: true
   ShowToc: false
 
   production: true
